--- a/DatingApp-Server/Pages/_ViewImports.cshtml
+++ b/DatingApp-Server/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using DatingApp_Server
-@namespace DatingApp_Server.Pages
+﻿@using AppChat_Server
+@namespace AppChat_Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
